--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "framer-motion": "^2.9.4",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-loader-spinner": "^3.1.14",
     "react-scripts": "4.0.0",
     "web-vitals": "^0.2.4"
   },
